missing images repro attempt